[package]
name = "esp-hal-rmt-onewire"
version = "0.3.0"
edition = "2021"
description = "RMT adapter for onewire with esp-hal and embassy"
license = "MIT OR Apache-2.0"

[features]
search-masks = []

[dependencies]
embassy-futures = { version = "0.1.1" }
esp-hal = { version = "1.0.0-beta.0", features = [ "unstable" ] }

[dev-dependencies]
embassy-executor = { version="0.7.0" }
esp-hal = { version = "1.0.0-beta.0", features=["esp32c3"] }
esp-backtrace = { version="0.15.1", features=["esp32c3", "println", "exception-handler", "panic-handler"] }
esp-println = { version="0.13.0", features=["esp32c3"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.7.0", features=["esp32c3"] }
fixed = "1.28.0"

[package.metadata.docs.rs]
features = [ "esp-hal/esp32c3" ]
default-target = "riscv32imc-unknown-none-elf"
targets = ["riscv32imc-unknown-none-elf"]
